# Win32Acrylic

./: .gitignore  AcrylicApplication.cpp  AcrylicApplication.h  AdvApi32_Thunk.cpp  CMakeLists.txt  Color.hpp  CompositionApplication.cpp  CompositionApplication.h  CompositionWindow.cpp  CompositionWindow.h  CustomFrame.cpp  Definitions.h  Gdi32_Thunk.cpp  Global.h  LICENSE  Ole32_Thunk.cpp  OperationResult.cpp  OperationResult.h  README.md  Resource.h  RuntimeObject.cpp  RuntimeObject_Thunk.cpp  Shell32_Thunk.cpp  SystemLibrary.cpp  SystemLibrary.h  SystemLibraryManager.cpp  SystemLibraryManager.h  TODO.md  TODO.txt  User32_Thunk.cpp  Utils.cpp  Utils.h  UxTheme_Thunk.cpp  VersionNumber.hpp  Win32AcrylicHelper.manifest  Win32AcrylicHelper.rc  Window.cpp  Window.h  WindowsAPIThunks.cpp  WindowsVersion.cpp  (+28 more)
Composition/: CompositionApplication.cpp  CompositionWindow.cpp  CompositionWindow.h
Direct2D/: Application.cpp  MainWindow.cpp
DirectComposition/: Application.cpp  MainWindow.cpp  MainWindow.h  README.md
UWP/: Application.cpp  MainWindow.cpp  MainWindow.h  UWPApplication.cpp  UWPApplication.h  UWPWindow.cpp  UWPWindow.h  main_UWP.cpp
Win32/: Application.cpp  MainWindow.cpp
Win32AcrylicHelper/: Definitions.h  Utils.cpp  Utils.h  Win32AcrylicHelper.manifest  Win32AcrylicHelper.rc  Window.cpp  Window.h  WindowsVersion.cpp  WindowsVersion.h  pch.cpp  pch.h
Win32AcrylicHelper/Thunks/: AdvApi32_Thunk.cpp  ComBase_Thunk.cpp  CoreMessaging_Thunk.cpp  D2D1_Thunk.cpp  D3D11_Thunk.cpp  DComp_Thunk.cpp  DispatcherQueue_Thunk.h  DwmApi_Thunk.cpp  Gdi32_Thunk.cpp  Ole32_Thunk.cpp  OleAut32_Thunk.cpp  SHCore_Thunk.cpp  Shell32_Thunk.cpp  SystemLibrary.cpp  SystemLibraryManager.cpp  SystemLibraryManager.h  Undocumented.cpp  Undocumented.h  User32_Thunk.cpp  UxTheme_Thunk.cpp  WinMM_Thunk.cpp  WinRTWrappers.cpp  WindowsAPIThunks.cpp  WindowsAPIThunks.h
WinUI2/: CMakeLists.txt  RuntimeObject.cpp  WinUI2.cpp  WinUI2.manifest  WinUI2.rc  main.cpp  resource.h
Windows.UI.Composition/: Application.cpp  Application.h  MainWindow.cpp  main.cpp
Xaml/: XamlWindow.cpp  XamlWindow.h  main_Xaml.cpp
demo/: CMakeLists.txt  acrylicmanager.hpp  am_apis.hpp  demo.manifest  demo.rc  hostwindow.cpp  main.cpp  simple.cpp
src/: CMakeLists.txt  acrylicbrush.cpp  acrylicbrush.h  acrylicbrush_composition.cpp  acrylicbrush_composition.h  acrylicbrush_direct2d.cpp  acrylicbrush_direct2d.h  acrylicbrush_null.cpp  acrylicbrush_null.h  acrylicbrush_system.cpp  acrylicbrush_system.h  acrylicbrush_winui2.cpp  acrylicbrush_winui2.h  acrylicbrush_winui3.cpp  acrylicbrush_winui3.h  acrylicbrush_xaml.cpp  acrylicbrushfactory.cpp  acrylicbrushfactory.h  acrylicmanager.cpp  acrylicmanager.h  acrylicmanager.rc  acrylicmanager.rc.in  acrylicmanager_global.h  acrylicmanager_p.h  colorconversion.cpp  colorconversion.h  customframe.cpp  customframe.h  dynamicapis.cpp  resource.h  runtimeobject.cpp  utils.cpp  utils.h
